--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -843,7 +843,8 @@ groups:
 # deployment, so the timeout for this alert is 3 hours and 10 minutes.
   - alert: GardenerHistoricalThroughputIsStalled
     expr: |
-      increase(gardener_jobs_total{status="success"}[1d] offset 24h) > 0
+      increase(gardener_jobs_total{status="success"}[1d]) > 0
+        UNLESS ON(date) gardener_yesterday_job_date == 1
         UNLESS ON(datatype) bq_gardener_historical_throughput > 0
     for: 190m
     labels:
@@ -854,6 +855,22 @@ groups:
       summary: Gardener historical throughput below 1 for {{ $labels.datatype }}.
       description: Gardener runs in the "data-processing" cluster.
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/eBbUW6oik/pipeline-gardener?var-project=mlab-oti&var-pipelineDatasource=Data%20Processing%20(mlab-oti)
+
+# GardenerConfigDatatypeMissingInGardenerHistoricalThroughput fires when a datatype exists in the Gardener config
+# but not in the bq_gardener_historical_throughput query.
+  - alert: GardenerConfigDatatypeMissingInGardenerHistoricalThroughput
+    expr: |
+      gardener_config_datatypes UNLESS ON(datatype) bq_gardener_historical_throughput
+    for: 190m
+    labels:
+      repo: dev-tracker
+      severity: ticket
+      cluster: prometheus-federation
+    annotations:
+      summary: {{ $labels.datatype }} datatype in Gardener config missing in bq_gardener_historical_throughput query.
+      description: A Gardener configured datatype was not discovered by the bq_gardener_historical_throughput
+        metric in BigQuery Exporter. Check the query to make sure that all the datatypes configured in the Gardener
+        exist in the query.
 
 # GardenerFailureRateTooHighOrMissing fires when the number of failed Gardener jobs
 # in the last day rises above 1% or the number of total jobs is not reported.
