--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ dist: focal
 
 language: go
 go:
- - 1.13
+ - 1.18
 
 addons:
   apt:
@@ -18,9 +18,7 @@ install:
   # Install promtool and pin it at the latest stable version.
 - PROMTOOL_URI=github.com/prometheus/prometheus/cmd/promtool;
   PROMTOOL_VERSION=v2.16.0;
-  go get -d $PROMTOOL_URI;
-  git -C $GOPATH/src/$PROMTOOL_URI checkout -b $PROMTOOL_VERSION tags/$PROMTOOL_VERSION;
-  go install $PROMTOOL_URI
+  go install $PROMTOOL_URI:$PROMTOOL_VERSION;
   # Install kexpand templating tool. Only works from HEAD.
 - go get github.com/kopeio/kexpand
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
