--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   # Install promtool and pin it at the latest stable version.
 - PROMTOOL_URI=github.com/prometheus/prometheus/cmd/promtool;
   PROMTOOL_VERSION=v2.16.0;
-  go install $PROMTOOL_URI:$PROMTOOL_VERSION;
+  go install $PROMTOOL_URI@$PROMTOOL_VERSION;
   # Install kexpand templating tool. Only works from HEAD.
 - go install github.com/kopeio/kexpand@latest
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
