--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,10 @@ go_import_path: github.com/m-lab/prometheus-support
 install:
   # Install promtool and pin it at the latest stable version.
 - PROMTOOL_URI=github.com/prometheus/prometheus/cmd/promtool;
-  PROMTOOL_VERSION=v2.16.0;
-  go install $PROMTOOL_URI@$PROMTOOL_VERSION;
+  PROMTOOL_VERSION=v2.35.0;
+  go get -d $PROMTOOL_URI;
+  git -C $GOPATH/src/$PROMTOOL_URI checkout -b $PROMTOOL_VERSION tags/$PROMTOOL_VERSION;
+  go install $PROMTOOL_URI
   # Install kexpand templating tool. Only works from HEAD.
 - go install github.com/kopeio/kexpand@latest
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
