--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,9 @@ install:
   # Install promtool and pin it at the latest stable version.
 - PROMTOOL_URI=github.com/prometheus/prometheus/cmd/promtool;
   PROMTOOL_VERSION=v2.35.0;
-  GO111MODULE=OFF go get -d $PROMTOOL_URI;
+  GO111MODULE=off go get -d $PROMTOOL_URI;
   git -C $GOPATH/src/$PROMTOOL_URI checkout -b $PROMTOOL_VERSION tags/$PROMTOOL_VERSION;
-  GO111MODULE=OFF go install $PROMTOOL_URI
+  GO111MODULE=off go install $PROMTOOL_URI
   # Install kexpand templating tool. Only works from HEAD.
 - go install github.com/kopeio/kexpand@latest
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh kubectl
