--- a/k8s/prometheus-federation/persistentvolumes/storage-class.yml
+++ b/k8s/prometheus-federation/persistentvolumes/storage-class.yml
@@ -1,5 +1,6 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
+allowVolumeExpansion: true
 metadata:
   name: slow
 provisioner: kubernetes.io/gce-pd
