Target 'locate' service

--- a/k8s/prometheus-federation/deployments/script-exporter.yml
+++ b/k8s/prometheus-federation/deployments/script-exporter.yml
@@ -41,7 +41,7 @@ spec:
         - name: MONITORING_SIGNER_KEY
           value: /keys/monitoring-signer-key.json
         - name: LOCATE_URL
-          value: https://locate-platform-dot-{{LOCATE_PROJECT}}.appspot.com/v2/platform/monitoring/
+          value: https://locate-dot-{{LOCATE_PROJECT}}.appspot.com/v2/platform/monitoring/
         ports:
         - containerPort: 9172
         volumeMounts:
