Remove TODO, interactive flag

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,7 @@ addons:
 go_import_path: github.com/m-lab/prometheus-support
 
 install:
-  # Install promtool and pin it at the latest stable version.
-  # TODO: use a prebuilt binary from the prometheus Docker container to speed
-  # up the build.
+  # Install promtool and pin to a recent stable version.
 - docker pull prom/prometheus:v2.35.0
   # Install kexpand templating tool. Only works from HEAD.
 - go install github.com/kopeio/kexpand@latest
@@ -33,9 +31,9 @@ script:
 - which jsonlint
 - git ls-files | grep '\.json$' | xargs jsonlint -q
 # Use promtool to check current alerts and rules. This is only a syntax check.
-- docker run -v $PWD/config:/config --entrypoint /bin/promtool -it prom/prometheus:v2.35.0
+- docker run -v $PWD/config:/config --entrypoint /bin/promtool -t prom/prometheus:v2.35.0
     check rules /config/federation/prometheus/alerts.yml
-- docker run -v $PWD/config:/config --entrypoint /bin/promtool -it prom/prometheus:v2.35.0
+- docker run -v $PWD/config:/config --entrypoint /bin/promtool -t prom/prometheus:v2.35.0
     check rules /config/federation/prometheus/rules.yml
 - $TRAVIS_BUILD_DIR/travis/install_gcloud.sh
 
