--- a/k8s/data-processing/persistentvolumes/storage-class.yml
+++ b/k8s/data-processing/persistentvolumes/storage-class.yml
@@ -1,4 +1,4 @@
-apiVersion: storage.k8s.io/v1beta1
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: slow
@@ -6,7 +6,7 @@ provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-standard
 ---
-apiVersion: storage.k8s.io/v1beta1
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: fast
