--- a/k8s/prometheus-federation/persistentvolumes/storage-class.yml
+++ b/k8s/prometheus-federation/persistentvolumes/storage-class.yml
@@ -7,7 +7,7 @@ provisioner: kubernetes.io/gce-pd
 parameters:
   type: pd-standard
 ---
-apiVersion: storage.k8s.io/v1beta1
+apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: fast
