--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -141,7 +141,7 @@ spec:
                 "--http-target=/targets/switch-monitoring-targets/switch-monitoring.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/switch-monitoring-targets/switch-monitoring.json",
                 "--project={{GCLOUD_PROJECT}}",
-                "--aef-project={{LOCATE_PROJECT}}"]
+                "--aef-project=mlab-ns"]
         ports:
           - containerPort: 9373
         resources:
