Pass in prometheus address

--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -159,7 +159,8 @@ spec:
       - image: measurementlab/gcp-service-discovery:v1.5.1
         name: service-discovery-locate
         args: [ "--aef-target=/targets/aeflex-targets/aeflex-locate.json",
-                "--project=mlab-ns"]
+                "--project=mlab-ns",
+                "--prometheusx.listen-address=:9374"]
         ports:
           - containerPort: 9374
         resources:
