--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -140,7 +140,8 @@ spec:
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/bmc-targets/bmc_e2e.json",
                 "--http-target=/targets/switch-monitoring-targets/switch-monitoring.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/switch-monitoring-targets/switch-monitoring.json",
-                "--project={{GCLOUD_PROJECT}}"]
+                "--project={{GCLOUD_PROJECT}}",
+                "--prometheusx.listen-address=:9373"]
         ports:
           - containerPort: 9373
         resources:
@@ -159,7 +160,7 @@ spec:
       - image: measurementlab/gcp-service-discovery:v1.5.1
         name: service-discovery-locate
         args: [ "--aef-target=/targets/aeflex-targets/aeflex-locate.json",
-                "--project=mlab-ns",
+                "--project={{LOCATE_PROJECT}}",
                 "--prometheusx.listen-address=:9374"]
         ports:
           - containerPort: 9374
