--- a/k8s/prometheus-federation/deployments/prometheus.yml
+++ b/k8s/prometheus-federation/deployments/prometheus.yml
@@ -103,8 +103,7 @@ spec:
           name: prometheus-config
       - image: measurementlab/gcp-service-discovery:v1.5.1
         name: service-discovery
-        args: [ "--aef-target=/targets/aeflex-targets/aeflex.json",
-                "--gke-target=/targets/federation-targets/prometheus-clusters.json",
+        args: [ "--gke-target=/targets/federation-targets/prometheus-clusters.json",
                 "--http-target=/targets/blackbox-targets/ssh.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/blackbox-targets/ssh.json",
                 "--http-target=/targets/blackbox-targets-ipv6/ssh_ipv6.json",
@@ -140,9 +139,30 @@ spec:
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/bmc-targets/bmc_e2e.json",
                 "--http-target=/targets/switch-monitoring-targets/switch-monitoring.json",
                 "--http-source=https://storage.googleapis.com/operator-{{GCLOUD_PROJECT}}/prometheus/switch-monitoring-targets/switch-monitoring.json",
-                "--project={{GCLOUD_PROJECT}}"]
+                "--project={{GCLOUD_PROJECT}}",
+                "--prometheusx.listen-address=:9373"]
         ports:
           - containerPort: 9373
+        resources:
+          requests:
+            memory: "150Mi"
+            cpu: "150m"
+          limits:
+            memory: "150Mi"
+            cpu: "150m"
+        volumeMounts:
+        # Mount the the prometheus-storage for write access to the target
+        # directories.
+        - mountPath: /targets
+          name: prometheus-storage
+
+      - image: measurementlab/gcp-service-discovery:v1.5.1
+        name: service-discovery-locate
+        args: [ "--aef-target=/targets/aeflex-targets/aeflex.json",
+                "--project={{LOCATE_PROJECT}}",
+                "--prometheusx.listen-address=:9374"]
+        ports:
+          - containerPort: 9374
         resources:
           requests:
             memory: "150Mi"
