Puts build env vars in single quotes

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -56,8 +56,8 @@ steps:
 - name: gcr.io/google.com/cloudsdktool/cloud-sdk
   entrypoint: bash
   env:
-  - GO_VERSION=1.20.2
-  - PROM_VERSION=2.37.0
+  - 'GO_VERSION=1.20.2'
+  - 'PROM_VERSION=2.37.0'
   secretEnv:
   - AM_SLACK_CHANNEL_URL
   - GF_AUTH_GOOGLE_CLIENT_SECRET
