--- a/config/federation/bigquery/bq_gardener.sql.template
+++ b/config/federation/bigquery/bq_gardener.sql.template
@@ -43,21 +43,21 @@ WITH all_types AS (
   WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
-    "raw_ndt.annotation" AS datatype,
+    "raw_ndt.annotation2" AS datatype,
     id,
     date,
     parser.Time as parseTime,
   FROM
-    `{{PROJECT}}.raw_ndt.annotation`
+    `{{PROJECT}}.raw_ndt.annotation2`
   WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
-    "raw_ndt.hopannotation1" AS datatype,
+    "raw_ndt.hopannotation2" AS datatype,
     id,
     date,
     parser.Time as parseTime,
   FROM
-    `{{PROJECT}}.raw_ndt.hopannotation1`
+    `{{PROJECT}}.raw_ndt.hopannotation2`
   WHERE date > date('2019-01-01')
   UNION ALL
   SELECT
