--- a/config/federation/bigquery/bq_gardener_historical.sql.template
+++ b/config/federation/bigquery/bq_gardener_historical.sql.template
@@ -3,85 +3,52 @@
 -- processed in the last 24 hours for each v2 datatype.
 
 WITH all_types AS (
-  SELECT
-    "ndt7" AS datatype,
-    id,
-    date,
-    parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_ndt.ndt7`
-  WHERE
-    date > date('2019-01-01')
+  -- NDT
+  SELECT "ndt" AS experiment, "ndt7" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_ndt.ndt7`
+  WHERE date > date('2019-01-01')
   UNION ALL
-  SELECT
-    "ndt5" AS datatype,
-    id,
-    date,
-    parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_ndt.ndt5`
-  WHERE
-    date > date('2019-01-01')
+  SELECT "ndt" AS experiment, "ndt5" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_ndt.ndt5`
+  WHERE date > date('2019-01-01')
   UNION ALL
-  SELECT
-    "annotation2" AS datatype,
-    id,
-    date,
-    parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_ndt.annotation2`
-  WHERE
-    date > date('2019-01-01')
+  SELECT "ndt" AS experiment, "annotation2" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_ndt.annotation2`
+  WHERE date > date('2019-01-01')
   UNION ALL
-  SELECT
-    "hopannotation2" AS datatype,
-    id,
-    date,
-    parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_ndt.hopannotation2`
-  WHERE
-    date > date('2019-01-01')
+  SELECT "ndt" AS experiment, "hopannotation2" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_ndt.hopannotation2`
+  WHERE date > date('2019-01-01')
   UNION ALL
-  SELECT
-    "pcap" AS datatype,
-    id,
-    date,
-    parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_ndt.pcap`
-  WHERE
-    date > date('2019-01-01')
+  SELECT "ndt" AS experiment, "pcap" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_ndt.pcap`
+  WHERE date > date('2019-01-01')
   UNION ALL
-  SELECT
-    "scamper1" AS datatype,
-    id,
-    date,
-    parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_ndt.scamper1`
-  WHERE
-    date > date('2019-03-28')
+  SELECT "ndt" AS experiment, "scamper1" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_ndt.scamper1`
+  WHERE date > date('2019-03-28')
   UNION ALL
-  SELECT
-    "switch" AS datatype,
-    id,
-    date,
-    parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_utilization.switch`
-  WHERE
-    date > date('2015-11-19')
+  SELECT "ndt" AS experiment, "tcpinfo" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_ndt.tcpinfo`
+  WHERE date > DATE('2019-01-01')
   UNION ALL
-  SELECT
-   "tcpinfo" AS datatype,
-   id,
-   date,
-   parser.Time as parseTime,
-  FROM
-    `{{PROJECT}}.raw_ndt.tcpinfo`
-  WHERE
-    date > DATE('2019-01-01')
+  -- UTILIZATION
+  SELECT "utilization" AS experiment, "switch" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_utilization.switch`
+  WHERE date > date('2015-11-19')
+  UNION ALL
+  -- WEHE
+  SELECT "wehe" AS experiment, "annotation2" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_wehe.annotation2`
+  WHERE date > DATE('2019-01-01')
+  UNION ALL
+  SELECT "wehe" AS experiment, "hopannotation2" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.raw_wehe.hopannotation2`
+  WHERE date > DATE('2019-01-01')
+  UNION ALL
+  SELECT "wehe" AS experiment, "scamper1" AS datatype, id, date, parser.Time as parseTime,
+  FROM `{{PROJECT}}.wehe.scamper1`
+  WHERE date > DATE('2019-01-01')
 ),
 
 processed_types AS (
