--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1305,7 +1305,7 @@ groups:
       severity: ticket
       cluster: prometheus-federation
     annotations:
-      summary: The Pipeline autoloader down or missing.
+      summary: The Pipeline autoloader is down or missing.
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#pipeline_autoloaderdownormissing
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/OKQmdgs4k/pipeline-autoloader?orgId=1
 
