--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -401,7 +401,7 @@ scrape_configs:
         - 'etl_test_total'
         - 'up{container="downloader"}'
         - 'downloader_last_success_time_seconds'
-        - 'up{container="autoloader}'
+        - 'up{container="autoloader"}'
         - 'autoloader_bigquery_operations_total'
         - 'autoloader_duration_count'
     static_configs:
