--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -1314,7 +1314,7 @@ groups:
 # a dataset or table in BigQuery.
   - alert: Pipeline_AutoloaderCreateOrUpdateError
     expr: |
-      autoloader_bigquery_operations_total{operation=~"create.*|update.*", status!="OK"}
+      sum by (experiment, datatype) (increase(autoloader_bigquery_operations_total{operation=~"create.*|update.*", status!="OK"}[10m])) > 0
     for: 10m
     labels:
       repo: dev-tracker
@@ -1325,17 +1325,19 @@ groups:
       description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#pipeline_autoloadercreateorupdateerror
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/OKQmdgs4k/pipeline-autoloader?orgId=1&viewPanel=15
 
-# Pipeline_AutoloaderDailyJobMissing fires when the autoloader's daily job for a datatype
-# has not run in 6 hours.
-  - alert: Pipeline_AutoloaderDailyJobMissing
+# Pipeline_AutoloaderDailyJobErrorOrMissing fires when the autoloader's daily job for a datatype
+# has not run or has returned an error in 6 hours.
+  - alert: Pipeline_AutoloaderDailyJobErrorOrMissing
     expr: |
       sum by (experiment, datatype) (increase(autoloader_duration_count{period="daily"}[6h])) == 0
+        OR sum by (experiment, datatype) (increase(autoloader_duration_count{period="daily", status!="OK"}[6h])) > 0
     for: 3h
     labels:
       repo: dev-tracker
       severity: ticket
       cluster: prometheus-federation
     annotations:
-      summary: The Pipeline autoloader has failed to run the daily job for {{ $labels.experiment}}.{{ $labels.datatype }}.
-      description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#pipeline_autoloaderdailyjobmissing
+      summary: The Pipeline autoloader has failed to run the daily job or the job has returned an error
+        for {{ $labels.experiment}}.{{ $labels.datatype }}.
+      description: https://github.com/m-lab/ops-tracker/wiki/Alerts-&-Troubleshooting#pipeline_autoloaderdailyjoberrorormissing
       dashboard: https://grafana.mlab-oti.measurementlab.net/d/OKQmdgs4k/pipeline-autoloader?orgId=1&viewPanel=12
